# HackathonCyberGarden

./: Cargo.toml  README.md
claster_creator/: Cargo.toml
claster_creator/src/: main.rs
conception/: Cargo.toml
conception/src/: claster.rs  claster_info.rs  flashcard.rs  lib.rs
docs/CyberGarden/TelegramBot/: State.canvas
docs/CyberGarden/bot_commands/: Add.md  Answer.md  Flesh или Next.md  Get.md  Help.md  Info.md  Login.md  Remove.md
flashcards/: IM__100CE793C8FC6BFE.json  IM__1D5AA7F2FFDD0BCA.json  IM__311132D67D203F37.json  IM__66C1EA87FCE12190.json  IM__789DD7B577F505C5.json  IM__7FEE45E7ADFC413F.json  IM__8A49ED32E5BF28BE.json  IM__BF70BD6E81BD577F.json  IM__E6A7313BC5D0A5C.json  IM__EB7AE4906F6D5429.json
telegram_bot/: Cargo.toml
telegram_bot/src/: command.rs  functions.rs  init.rs  lib.rs  load_claster.rs  main.rs  state.rs  structs.rs  types.rs
telegram_bot/src/command/: HELP.md  help.rs  login.rs  student.rs
telegram_bot/src/structs/: claster_id.rs  claster_space.rs
